--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "set NODE_OPTIONS=--no-deprecation && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -44,6 +44,7 @@
     "next-themes": "^0.4.6",
     "next-video": "^2.5.0",
     "plyr": "^3.8.3",
+    "punycode": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
