--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-player": "^3.3.1",
+    "recharts": "^3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tooltip": "^1.6.1",
