--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
@@ -58,6 +59,7 @@
     "react-hot-toast": "^2.6.0",
     "react-player": "^3.3.1",
     "recharts": "^3.4.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tooltip": "^1.6.1",
