update thanh toán và duyệt khóa học

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-video": "^2.5.0",
     "plyr": "^3.8.3",
     "punycode": "^2.3.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.2",
     "react-dom": "19.2",
     "react-hook-form": "^7.66.0",
